Implementar el GET de seguimientos
